--- a/src/assets/css/Sections.css
+++ b/src/assets/css/Sections.css
@@ -207,6 +207,7 @@
   height: 100% !important;
   width: 100% !important;
   gap: 0px;
+  margin-bottom: 0px;
 }
 
 .expandable {
